# orchestra

./: .env  .gitignore  .gitignore.swp  README.md  main.py  pyproject.toml  test_api.py  tsconfig.json
api/: server.py
manim-app/manim/: Dockerfile
manim_code/: 09d6301a.py  0d6d43b2.py  0d8aaee9.py  227140fe.py  6332c555.py  8fcd8152.py  9136ff2e.py  b803a013.py  cc2431eb.py  d46e047d.py  dd7c85f9.py
src/: deepseek.py  server.ts  test.py  test2.py  test3.py
src/fastapi/: main.py
src/llm/: deepseek.py
src/manim/: Dockerfile  code_extractor.py  code_validation.py  render.py  uploader.py
src/rag/: embedder.py  manim_prompter.py  types.py
src/scraped_data_manim/: en_latest__modules_manim__config.html.txt  en_latest__modules_manim__config_logger_utils.html.txt  en_latest__modules_manim__config_utils.html.txt  en_latest__modules_manim_animation_animation.html.txt  en_latest__modules_manim_animation_changing.html.txt  en_latest__modules_manim_animation_composition.html.txt  en_latest__modules_manim_animation_creation.html.txt  en_latest__modules_manim_animation_fading.html.txt  en_latest__modules_manim_animation_growing.html.txt  en_latest__modules_manim_animation_indication.html.txt  en_latest__modules_manim_animation_movement.html.txt  en_latest__modules_manim_animation_numbers.html.txt  en_latest__modules_manim_animation_rotation.html.txt  en_latest__modules_manim_animation_specialized.html.txt  en_latest__modules_manim_animation_speedmodifier.html.txt  en_latest__modules_manim_animation_transform.html.txt  (+1068 more)
tools/: tools_echo.py  tools_search.py
(+24 files in other folders)
